ensure decent spacing at the top of all blocks with green debug line [PT #188828155]

--- a/src/applications/primo/www/components/search/searchResult/searchResultList/_search-result-list.scss
+++ b/src/applications/primo/www/components/search/searchResult/searchResultList/_search-result-list.scss
@@ -124,11 +124,22 @@ prm-search-result-list {
                 }
             }
         }
+/*
+.list-item-wrapper.first-in-page prm-brief-result-container {
+    margin-top: 10px;
+    border-left: thick solid green;
+}
 
+ */
         .list-item-wrapper {
             // first item of every page
             &.first-in-page {
                 position: relative;
+
+                prm-brief-result-container {
+                    margin-top: 10px;
+                    border-left: thick solid green;
+                }
 
                 .md-subheader {
                     height: 0;
